<resources>
    <string name="app_name">AuraFocus_1</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_acct">acct</string>
    <string name="todo1">TODO</string>
    <string name="profile">Profile</string>
    <string name="hello">Hello</string>
    <string name="todo">TODO</string>
    <string name="settings">Settings</string>
    <string name="textview">TextView</string>
    <string name="namee">Name</string>
    <string name="name2">Name</string>
    <string name="email">Email</string>
    <string name="username2">Username</string>
    <string name="password">Password</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="textview2">TextView</string>
    <string name="admin">Admin</string>
    <string name="login" />
    <string name="title_activity_demo_ad">demoAd</string>
    <string name="admin_panel"><b>Admin Panel</b></string>
    <string name="name">Name</string>
    <string name="user_id">User Id</string>
    <string name="e_mail">E - Mail</string>
    <string name="username">Username</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate US</string>
    <string name="todo2">TODO</string>
</resources>
