<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/flower3"
    tools:context=".Admin">

    <TextView
        android:id="@+id/Admintital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/admin_panel"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Admintital"
        app:layout_constraintVertical_bias="0.058">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <EditText
            android:id="@+id/aduserid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/user_id"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/adname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/ademail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/adusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/adpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <Button
        android:id="@+id/btnadd"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="13dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="13dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="420dp"
        android:background="@drawable/button"
        android:text="ADD"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/btnview"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnupdate"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="13dp"
        android:layout_marginLeft="155dp"
        android:layout_marginRight="13dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="420dp"
        android:background="@drawable/button"
        android:text="UPDATE"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnview"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout8"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btndelete"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="260dp"
        android:layout_marginRight="25dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="424dp"
        android:background="@drawable/button"
        android:text="DELETE"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnview"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnview"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginEnd="97dp"
        android:layout_marginLeft="96dp"
        android:layout_marginRight="97dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="512dp"
        android:background="@drawable/button2"
        android:text="VIEW ALL"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>